--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
 
-    <img src="/Users/evansbakire/Downloads/lampstack/images/newimage.png" alt="Example Image" id="loginImage" />
+    <img src="img/logo.png" alt="Example Image" id="loginImage" />
 
 
 
