Added in-progress Contacts page and changed formatting

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <h1 id="title">Contact Manager</h1>
+    <h1 id="title">Contact Manager<img src="img/logo.png" id="loginImage" /></h1>
 
 
     <div id="loginpr">
@@ -35,16 +35,10 @@
             <i class='bx bx-lock-alt'></i>
         </div>
 
-        <button type="button" id="loginButton" class="buttons" onclick="doLogin();"> log in </button>
+        <button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Login </button>
         <button type="button" id="createacc" class="buttons2" onclick="createAccount();"> Create account </button>
 
     </div>
-
-
-
-
-
-    <img src="img/logo.png" alt="Example Image" id="loginImage" />
 
 
 
