Added favicon Commented out circle buttons

--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/styles_dashboard.css" />
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -42,8 +43,10 @@
             <div id="ctheader">
                 <p><i class="material-icons">list</i> Contacts list</p>
 
+                <!--
                 <button title="Create Contact"><i class="material-icons">person_add</i></button>
                 <button title="Remove Contact"><i class="material-icons">delete_forever</i></button>
+                -->
             </div>
 
             <div id="contactslist">
