--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                                 <p class ="createicon"> LastName<span style = "color:red">*</span></p>
                                 <input type="text" id="lastname" placeholder="Set Password" />
                                 <p class ="createicon"> login <span style = "color:red">*</span></p>
-                                <input type="text" id="login" placeholder="Enter email" />
+                                <input type="text" id="login" placeholder="Enter Login" />
                                 <p class ="createicon"> password <span style = "color:red">*</span></p>
-                                <input type="text" id="password" placeholder=" Enter Phone number " />
+                                <input type="text" id="password" placeholder=" Enter password " />
 
             <button onclick="hidePopup()" type="button">Finish</button></div>
 
