--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,8 @@
 
     <title>Dashboard</title>
 
+    <script type="text/javascript" src="js/contacts.js"></script>
+
     <link rel="stylesheet" href="css/styles_dashboard.css" />
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,26 +18,48 @@
 
 <body>
     <div id="toptab">
-        <p><img src="img/logo.png" id="logo"/>Contacts Manager</p>
-        <input type="search" placeholder="Search. . ."/>
+        <p><img src="img/logo.png" id="logo" />Contacts Manager</p>
+        <input type="search" placeholder="Search. . ." />
+    </div>
+
+    <div id="addPopup">
+        <div class="addPopupContent">
+            <p>Create Contact</p>
+
+            <!--
+            API
+            Connect inputs to database when the
+            create button is clicked
+            -->
+            <input type="text" placeholder="Enter contact name" />
+            <input type="email" placeholder="Enter email" />
+            <input type="tel" placeholder="Enter phone number" />
+
+            <button onclick="hideAddPopup();">Cancel</button>
+            <button id="createContactBtn">Create</button>
+        </div>
     </div>
 
     <div id="viewport">
         <div id="sidetab">
             <div id="stprofile">
                 <i class="material-icons">person</i>
+                <!--
+                API 
+                replace username with logged in user's name    
+                -->
                 <p>Username</p>
             </div>
 
             <div id="uppercontent">
                 <p class="activetab"><i class="material-icons">list</i> Contacts</p>
-                <p><i class="material-icons">person_add</i> Create contact</p>
+                <p onclick="showAddPopup();"><i class="material-icons">person_add</i> Create contact</p>
                 <p><i class="material-icons">delete_forever</i> Remove contact</p>
             </div>
 
             <div id="lowercontent">
                 <p><i class="material-icons">settings</i> Settings</p>
-                <p><i class="material-icons">exit_to_app</i> Logout</p>
+                <p id="logout" onclick="logout()"><i class="material-icons">exit_to_app</i> Logout</p>
             </div>
         </div>
 
@@ -112,7 +136,18 @@
                 </div>
             </div>
         </div>
+
+        <div id="flexview">
+
+        </div>
     </div>
+
 </body>
+
+<script>
+    document.getElementById("logout").addEventListener("click", funtion() {
+        window.location.href = "index.html";
+    });
+</script>
 
 </html>
