--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
          <div id="loginpr">
             Login
          </div>
+
+         <div id="loader-container" class="loader-container">
+            <div id="bouncing-dots" class="bouncing-dots">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+            </div>
+          </div>
+          
+          
          <p class ="usericon"> Username <span style = "color:red">*</span></p>
          <div class="input-box">
             <input type="text" id="loginName" placeholder="Username" />
@@ -44,6 +54,10 @@
       </div>
       <span id="inner-title">PLEASE LOG IN</span>
       <span id="loginResult"></span>
-      <script></script>
+      <script>
+
+
+
+      </script>
    </body>
 </html>
