--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
     <div id="toptab">
         <p><img src="img/logo.png" id="logo" />Contacts Manager</p>
         <input type="search" id="searchCONTACT" placeholder="Search. . ." />
-        <h1 id="colorSearchResult"></h1>
+        <h1 id="contactfindresult"></h1>
         <p id ="contactlist"></p>
     </div>
 
