--- a/dashboard.html
+++ b/dashboard.html
@@ -50,7 +50,7 @@
                 API 
                 replace username with logged in user's name    
                 -->
-                <p>Username</p>
+                  <p id="firstnamelogin"></p>
             </div>
 
             <div id="uppercontent">
