--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,8 @@
             Connect inputs to database when the
             create button is clicked
             -->
-            <input id="iname" type="text" placeholder="Enter contact name" />
+            <input id="ifname" type="text" placeholder="Enter contact's first name" />
+            <input id="ilname" type="text" placeholder="Enter contact's last name" />
             <input id="iemail" type="email" placeholder="Enter email" />
             <input id="itel" type="tel" placeholder="Enter phone number" />
 
@@ -56,7 +57,7 @@
             <div id="uppercontent">
                 <p class="activetab"><i class="material-icons">list</i> Contacts</p>
                 <p onclick="showAddPopup();"><i class="material-icons">person_add</i> Create contact</p>
-                <p><i class="material-icons">delete_forever</i> Remove contact</p>
+                <!--<p><i class="material-icons">delete_forever</i> Remove contact</p>-->
             </div>
 
             <div id="lowercontent">
