--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 
     <script type="text/javascript" src="js/code.js"></script>
 
-    <link rel="stylesheet" href="css/styles_dashboard.css" />
+    <link rel="stylesheet" href="css/styles_dashboard.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/logo.png">
