--- a/dashboard.html
+++ b/dashboard.html
@@ -57,8 +57,12 @@
             <input id="ucontactemail" type="email" placeholder="Enter email" />
             <input id="ucontactphone" type="tel" placeholder="Enter phone number" />
 
-            <button onclick="hideUpdatePopup();">Cancel</button>
-            <button id="updateContactBtn" onclick="updateContact()">Update</button>
+            <div class="bttn">
+<button id="cancelupbttn" onclick="hideUpdatePopup();">Cancel</button>
+<button id="updateContactBtn" onclick="updateContact()">Update</button>
+     </div>
+
+            
         </div>
     </div>
 
